--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Last.fm_Scrubbler_WPF.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <userSettings>
+        <Last.fm_Scrubbler_WPF.Properties.Settings>
+            <setting name="Token" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Username" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="IsSubscriber" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </Last.fm_Scrubbler_WPF.Properties.Settings>
+    </userSettings>
 </configuration>
