--- a/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
+++ b/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
@@ -75,17 +75,25 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="IScrobbleStrategy.cs" />
+    <Compile Include="ViewModels\FetchedScrobbleViewModel.cs" />
     <Compile Include="UpdateStatusEventArgs.cs" />
+    <Compile Include="ViewModels\FriendScrobbleViewModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\ManualScrobbleViewModel.cs" />
+    <Compile Include="Views\FriendScrobbleView.xaml.cs">
+      <DependentUpon>FriendScrobbleView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\LoginView.xaml.cs">
       <DependentUpon>LoginView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ManualScrobbleView.xaml.cs">
       <DependentUpon>ManualScrobbleView.xaml</DependentUpon>
     </Compile>
+    <Page Include="Views\FriendScrobbleView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
