Implemented very basic iTunes scrobbler

--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -13,6 +13,9 @@
       <setting name="Username" serializeAs="String">
         <value />
       </setting>
+      <setting name="AutoConnect" serializeAs="String">
+        <value>False</value>
+      </setting>
     </Last.fm_Scrubbler_WPF.Properties.Settings>
   </userSettings>
   <system.net>
